--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        lab: ["util", "pgtbl", "syscall", "traps", "thread", "net", "cow"]
     steps:
     - uses: actions/checkout@v3
     - run: sudo apt-get install build-essential gdb-multiarch qemu-system-misc gcc-riscv64-linux-gnu binutils-riscv64-linux-gnu
-    - name: make
-      run: make qemu
+    - name: test lab {{ matrix.lab }}
+      run: LAB={{ matrix.lab }} make grade
